# taskfortress-api

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml
.husky/: pre-commit
src/: main.rs  paste_id.rs
templates/: index.html.hbs
templates/js/: data.mjs  main.js  onLoad.mjs  storage.mjs
