[package]
name = "taskfortress-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
shuttle-rocket = "0.47.0"
shuttle-runtime = "0.47.0"
tokio = "1.26.0"
rand = "0.8"
serde = "1.0.210"
handlebars = "6.1.0"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["handlebars", "tera", "minijinja"]
